--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests.csproj
@@ -16,10 +16,12 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="netDumbster" Version="3.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NServiceBus.Testing" Version="7.4.1" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.10.2-beta" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
