--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.10.2-beta" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="6.0.0" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
