--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
@@ -37,5 +37,9 @@
     "EvaluationTimeOnSeconds": 10,
     "MinimumSecondsBetweenFailureNotifications": 60,
     "MaximumExecutionHistoriesPerEndpoint": 15
+  },
+  "FeatureManagement":
+  {
+    "ObservabilityModule": true
   }
 }
