--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,7 @@ jobs:
     - name: Install stryker
       run:  dotnet tool install --global dotnet-stryker
      
-     
-    - name: dotnet stryker
+    - name: Valuation Domain Tests Mutation
       run:  cd Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests && dotnet stryker 
      
     - name: Valuations - Integrations Tests
