--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,10 @@ jobs:
      
     - name: Valuations - Domain Tests Mutations
       run:  cd Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests && dotnet stryker 
-     
+    
+    - name: Priorities - Domain Tests Mutations
+      run:  cd Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Priorities.Domain.Tests && dotnet stryker 
+ 
     - name: Valuations - Integrations Tests
       uses: zyborg/dotnet-tests-report@v1
       with:
