--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
@@ -9,8 +9,7 @@
   },
   "DateFormat": "f",
   "AllowedHosts": "*",
-  "FeatureManagement":
-  {
+  "FeatureManagement": {
     "ServicesModule": true,
     "ValuationModule": true,
     "InquiriesModule": true,
