--- a/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails/emails-appsettings.json
+++ b/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails/emails-appsettings.json
@@ -7,8 +7,7 @@
     "ServerLogin": "",
     "ServerPassword": ""
   },
-  "FeatureManagement":
-  {
+  "FeatureManagement": {
     "EmailsModule": true
   }
 }
