--- a/Src/Modules/Priorities/Divstack.Company.Estimation.Tool.Priorities.Api/priorities-appsettings.json
+++ b/Src/Modules/Priorities/Divstack.Company.Estimation.Tool.Priorities.Api/priorities-appsettings.json
@@ -4,8 +4,7 @@
       "WorksDaysToDeadlineFromNow": 2
     }
   },
-  "FeatureManagement":
-  {
+  "FeatureManagement": {
     "PrioritiesModule": true
   },
   "ConnectionStrings": {
