--- a/Src/Modules/Reminders/Divstack.Company.Estimation.Tool.Reminders.Priorities/reminders-priorities-appsettings.json
+++ b/Src/Modules/Reminders/Divstack.Company.Estimation.Tool.Reminders.Priorities/reminders-priorities-appsettings.json
@@ -4,8 +4,7 @@
       "DaysBeforeDeadline": 2
     }
   },
-  "FeatureManagement":
-  {
+  "FeatureManagement": {
     "RemindersModule": true
   }
 }
