--- a/Src/Modules/Services/Divstack.Company.Estimation.Tool.Services.Api/services-appsettings.json
+++ b/Src/Modules/Services/Divstack.Company.Estimation.Tool.Services.Api/services-appsettings.json
@@ -2,8 +2,7 @@
   "ConnectionStrings": {
     "Services": ""
   },
-  "FeatureManagement":
-  {
+  "FeatureManagement": {
     "ServicesModule": true
   }
 }
