--- a/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Api/users-appsettings.json
+++ b/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Api/users-appsettings.json
@@ -19,8 +19,7 @@
   "ConnectionStrings": {
     "Users": ""
   },
-  "FeatureManagement":
-  {
+  "FeatureManagement": {
     "UsersModule": true
   }
 }
