--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Api/valuations-appsettings.json
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Api/valuations-appsettings.json
@@ -9,8 +9,7 @@
   "ConnectionStrings": {
     "Valuations": ""
   },
-  "FeatureManagement":
-  {
+  "FeatureManagement": {
     "ValuationModule": true
   }
 }
