--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/appsettings.json
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Valuations": "Server=localhost;Port=52574;Database=db;User Id=postgres;Password=postgres;",
+    "Valuations": "Server=localhost;Port=52574;Database=db;User Id=postgres;Password=postgres;"
   },
   "Integrations": {
     "Trello": {
@@ -11,8 +11,7 @@
   },
   "DateFormat": "f",
   "AllowedHosts": "*",
-  "FeatureManagement":
-  {
+  "FeatureManagement": {
     "ValuationModule": true
   }
 }
