--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
@@ -38,8 +38,7 @@
     "MinimumSecondsBetweenFailureNotifications": 60,
     "MaximumExecutionHistoriesPerEndpoint": 15
   },
-  "FeatureManagement":
-  {
+  "FeatureManagement": {
     "ObservabilityModule": true
   }
 }
