[EventBus] - enable outbox pattern

--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
@@ -40,5 +40,13 @@
   },
   "FeatureManagement": {
     "ObservabilityModule": true
+  },
+ "EventBus":
+  {
+    "ConnectionString":"",
+    "Storage": {
+      "ConnectionString":"",
+      "DatabaseName":""
+    }
   }
 }
