--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
@@ -31,6 +31,8 @@
     <PackageReference Include="Microsoft.OpenApi" Version="1.3.0-preview" />
     <PackageReference Include="NServiceBus" Version="7.7.3" />
     <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.1.0" />
+    <PackageReference Include="NServiceBus.MongoDB" Version="7.2.1" />
+    <PackageReference Include="NServiceBus.Storage.MongoDB" Version="2.2.0" />
     <PackageReference Include="NServiceBus.Transport.AzureServiceBus" Version="2.0.2" />
     <PackageReference Include="Scrutor" Version="3.3.0" />
     <PackageReference Include="Sentry.AspNetCore" Version="3.12.0-alpha.1" />
