--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,10 +97,19 @@ jobs:
         fail_ci_if_error: true # optional (default = false)
         verbose: true # optional (default = false)
         
-    - name: Run Snyk to check for vulnerabilities
-      uses: snyk/actions/dotnet@master
-      continue-on-error: true
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        args: --file=Divstack.Company.Estimation.Tool.sln
+  security:
+      name: Security Scan
+      runs-on: ubuntu-latest
+      steps:    
+      - name: Checkout 
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/dotnet@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --file=Divstack.Company.Estimation.Tool.sln
