--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
@@ -4,7 +4,7 @@
       "Default": "Debug",
       "Microsoft": "Debug",
       "Microsoft.Hosting.Lifetime": "Debug",
-      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Debug"
     }
   },
   "DateFormat": "f",
