--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
@@ -7,6 +7,11 @@
       "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Debug"
     }
   },
+  "ApplicationInsights": {
+    "LogLevel": {
+      "Default": "Debug"
+    }
+  },
   "DateFormat": "f",
   "AllowedHosts": "*",
   "FeatureManagement": {
