--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/azure-appsettings.json
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/azure-appsettings.json
@@ -1,5 +1,11 @@
 ﻿{
   "ConnectionStrings": {
     "AzureAppConfiguration": ""
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "",
+    "LogLevel": {
+      "Default": "Debug"
+    }
   }
 }
