--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/azure-appsettings.json
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/azure-appsettings.json
@@ -5,7 +5,8 @@
   "ApplicationInsights": {
     "InstrumentationKey": "",
     "LogLevel": {
-      "Default": "Debug"
+      "Default": "Debug",
+      "Microsoft": "Debug"
     }
   }
 }
