[Logging] - fixed log level

--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
@@ -5,6 +5,14 @@
       "Microsoft": "Debug",
       "Microsoft.Hosting.Lifetime": "Debug",
       "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Debug"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Debug",
+        "Microsoft": "Debug",
+        "Microsoft.Hosting.Lifetime": "Debug",
+        "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Debug"
+      }
     }
   },
   "DateFormat": "f",
