--- a/Src/Modules/Inquiries/Divstack.Company.Estimation.Tool.Inquiries.Api/inquries-appsettings.json
+++ b/Src/Modules/Inquiries/Divstack.Company.Estimation.Tool.Inquiries.Api/inquries-appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Inquiries": "Server=195.78.66.133;Port=3306;Database=divstack_estimatetool;Uid=divstack_estimatetool;Pwd=5-irVNazMm1QPiG-;"
+    "Inquiries": ""
   },
   "FeatureManagement": {
     "InquiriesModule": true
