--- a/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Infrastructure/Divstack.Company.Estimation.Tool.Users.Infrastructure.csproj
+++ b/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Infrastructure/Divstack.Company.Estimation.Tool.Users.Infrastructure.csproj
@@ -20,5 +20,8 @@
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Users.Application\Divstack.Company.Estimation.Tool.Users.Application.csproj" />
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Users.Persistance\Divstack.Company.Estimation.Tool.Users.Persistance.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
+    <InternalsVisibleTo Include="Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests" />
+  </ItemGroup>
 </Project>
