--- a/Src/Modules/Users/Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests.csproj
+++ b/Src/Modules/Users/Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests.csproj
@@ -8,10 +8,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0"/>
-        <PackageReference Include="NUnit" Version="3.13.2"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0"/>
-        <PackageReference Include="coverlet.collector" Version="3.1.0"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+        <PackageReference Include="NSubstitute" Version="4.4.0" />
+        <PackageReference Include="NUnit" Version="3.13.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+        <PackageReference Include="coverlet.collector" Version="3.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Divstack.Company.Estimation.Tool.Users.Infrastructure\Divstack.Company.Estimation.Tool.Users.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
