--- a/Src/Modules/Users/Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests.csproj
+++ b/Src/Modules/Users/Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Faker.Net" Version="2.0.154" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
         <PackageReference Include="NSubstitute" Version="4.4.0" />
         <PackageReference Include="NUnit" Version="3.13.2" />
@@ -17,6 +18,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Divstack.Company.Estimation.Tool.Users.Infrastructure\Divstack.Company.Estimation.Tool.Users.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Fakers" />
     </ItemGroup>
 
 </Project>
