--- a/Src/Modules/Sms/Divstack.Company.Estimation.Tool.Sms.Core/Divstack.Company.Estimation.Tool.Sms.Core.csproj
+++ b/Src/Modules/Sms/Divstack.Company.Estimation.Tool.Sms.Core/Divstack.Company.Estimation.Tool.Sms.Core.csproj
@@ -7,19 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.GuardClauses" Version="3.3.0"/>
-    <PackageReference Include="Azure.Communication.Sms" Version="1.0.1"/>
-    <PackageReference Include="Azure.Core" Version="1.14.0"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0"/>
-    <PackageReference Include="Twilio.AspNet.Core" Version="5.77.0"/>
+    <PackageReference Include="Ardalis.GuardClauses" Version="3.3.0" />
+    <PackageReference Include="Azure.Communication.Sms" Version="1.0.1" />
+    <PackageReference Include="Azure.Core" Version="1.25.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="5.77.0" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="sms-core-appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.Infrastructure\Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
