--- a/Deployment/Infrastructure/Divstack.Estimation.Tool.Deployment.Infrastructure.csproj
+++ b/Deployment/Infrastructure/Divstack.Estimation.Tool.Deployment.Infrastructure.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Pulumi.Azure" Version="5.18.0" />
     <PackageReference Include="Pulumi.AzureAD" Version="5.29.0-alpha.1662120600" />
     <PackageReference Include="Pulumi.AzureNative" Version="1.76.0" />
+    <PackageReference Include="Pulumi.Docker" Version="3.4.1" />
   </ItemGroup>
 
 </Project>
