--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: pulumi/actions@v3
         with:
+          work-dir: Deployment/Infrastructure
           command: up
           stack-name: dev
         env:
