--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     types: [opened, synchronize, reopened]
 jobs:
   up:
-    name: Deploy infrastructure and Code to Azure
+    name: Deploy Code and Azure Infrastructure
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
