--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,7 +143,7 @@ jobs:
       - name: Generate SVG Diagrams
         uses: holowinski/plantuml-github-action@main
         with:
-          args: -v -tsvg Documentation/C4/*.puml
+          args: -v -tsvg ${{steps.getfile.outputs.files}}
 
       - name: Push Local Changes
         uses: stefanzweifel/git-auto-commit-action@v4.1.2
