--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -139,11 +139,16 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+     
+      - name: Get changed Diagrams code files
+        id: getfile
+        run: |
+          echo "::set-output name=files::$(git diff --name-only HEAD^ HEAD | grep .puml | xargs)"
 
       - name: Generate SVG Diagrams
         uses: holowinski/plantuml-github-action@main
         with:
-          args: -v -tsvg Documentation/C4/*.puml
+          args: -v -tsvg ${{steps.getfile.outputs.files}}
 
       - name: Push Local Changes
         uses: stefanzweifel/git-auto-commit-action@v4.1.2
