--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,7 +121,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-
+      - name: Install dependencies
+        run: dotnet restore
+      
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/dotnet@master
         env:
