--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,7 +129,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: file=Divstack.Company.Estimation.Tool.sln
+          args: file=Divstack.Company.Estimation.Tool.sln --all-projects
           
   architecture-diagrams:
       name: Architecture Diagrams
