--- a/Src/Modules/Priorities/Divstack.Company.Estimation.Tool.Priorities.Infrastructure/Divstack.Company.Estimation.Tool.Priorities.Infrastructure.csproj
+++ b/Src/Modules/Priorities/Divstack.Company.Estimation.Tool.Priorities.Infrastructure/Divstack.Company.Estimation.Tool.Priorities.Infrastructure.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
