--- a/Src/Modules/Sms/Divstack.Company.Estimation.Tool.Sms.Core/Divstack.Company.Estimation.Tool.Sms.Core.csproj
+++ b/Src/Modules/Sms/Divstack.Company.Estimation.Tool.Sms.Core/Divstack.Company.Estimation.Tool.Sms.Core.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Twilio.AspNet.Core" Version="5.77.0" />
   </ItemGroup>
 
