--- a/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Infrastructure/Divstack.Company.Estimation.Tool.Users.Infrastructure.csproj
+++ b/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Infrastructure/Divstack.Company.Estimation.Tool.Users.Infrastructure.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="MimeKit" Version="2.10.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="zxm.MailKit.Extensions.AspNetCore" Version="1.0.0" />
   </ItemGroup>
 
