--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
   </ItemGroup>
