--- a/Src/Shared/Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions.csproj
+++ b/Src/Shared/Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hangfire.Core" Version="1.8.0-beta3"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0"/>
+    <PackageReference Include="Hangfire.Core" Version="1.8.0-beta3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
