--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,23 +5,8 @@ on:
       - develop
   pull_request:
     types: [opened, synchronize, reopened]
+    
 jobs:
-  up:
-    name: Deploy Code Azure - IAAC
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: pulumi/actions@v3
-        with:
-          work-dir: Deployment/Infrastructure
-          command: up
-          stack-name: dev
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -115,6 +100,7 @@ jobs:
         
   security:
       name: Security Scan
+      needs: build
       runs-on: ubuntu-latest
       steps:    
       - name: Checkout 
@@ -132,9 +118,28 @@ jobs:
         with:
           args: --all-projects --detection-depth=10
           
+  iaac:
+    needs: security
+    name: Deploy Code Azure - IAAC
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: pulumi/actions@v3
+        with:
+          work-dir: Deployment/Infrastructure
+          command: up
+          stack-name: dev
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          
   architecture-diagrams:
       name: Architecture Diagrams
       runs-on: ubuntu-latest
+      needs: build
 
       steps:    
       - name: Checkout 
