--- a/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Persistance/Divstack.Company.Estimation.Tool.Users.Persistance.csproj
+++ b/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Persistance/Divstack.Company.Estimation.Tool.Users.Persistance.csproj
@@ -6,21 +6,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.MySql" Version="6.0.1"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.0"/>
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0"/>
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" VVVersion="1.1.6" Version="1.1.2"/>
-    <PackageReference Include="Scrutor" Version="3.3.0"/>
+    <PackageReference Include="AspNetCore.HealthChecks.MySql" Version="6.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.9" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" VVVersion="1.1.6" Version="1.1.2" />
+    <PackageReference Include="Scrutor" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.Infrastructure\Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj"/>
-    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Users.Domain\Divstack.Company.Estimation.Tool.Users.Domain.csproj"/>
+    <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.Infrastructure\Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj" />
+    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Users.Domain\Divstack.Company.Estimation.Tool.Users.Domain.csproj" />
   </ItemGroup>
 
 </Project>
