--- a/Src/Modules/Users/Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests.csproj
+++ b/Src/Modules/Users/Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests.csproj
@@ -9,11 +9,14 @@
 
     <ItemGroup>
         <PackageReference Include="Faker.Net" Version="2.0.154" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
         <PackageReference Include="NSubstitute" Version="4.4.0" />
-        <PackageReference Include="NUnit" Version="3.13.2" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
-        <PackageReference Include="coverlet.collector" Version="3.1.0" />
+        <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+        <PackageReference Include="coverlet.collector" Version="3.1.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
