--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
@@ -8,37 +8,37 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.GuardClauses" Version="3.3.0" />
-    <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="6.0.0" />
-    <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="6.0.0" />
-    <PackageReference Include="AspNetCore.HealthChecks.Publisher.ApplicationInsights" Version="6.0.0" />
-    <PackageReference Include="AspNetCore.HealthChecks.System" Version="6.0.0" />
-    <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="6.0.1-rc2.3" />
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="6.0.2" />
+    <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="6.0.2" />
+    <PackageReference Include="AspNetCore.HealthChecks.Publisher.ApplicationInsights" Version="6.0.2" />
+    <PackageReference Include="AspNetCore.HealthChecks.System" Version="6.0.5" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="6.0.5" />
     <PackageReference Include="Ben.Demystifier" Version="0.4.1" />
     <PackageReference Include="Hangfire" Version="1.8.0-beta3" />
     <PackageReference Include="Hangfire.InMemory" Version="0.3.4" />
-    <PackageReference Include="Hangfire.Mongo" Version="0.7.28" />
-    <PackageReference Include="MassTransit" Version="8.0.2" />
-    <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="8.0.2" />
+    <PackageReference Include="Hangfire.Mongo" Version="1.7.3" />
+    <PackageReference Include="MassTransit" Version="8.0.6" />
+    <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="8.0.6" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
-    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.0-preview3.21293.2" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="6.0.3" />
-    <PackageReference Include="Microsoft.OpenApi" Version="1.3.0-preview" />
-    <PackageReference Include="NServiceBus" Version="7.7.3" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="6.0.9" />
+    <PackageReference Include="Microsoft.OpenApi" Version="1.4.2" />
+    <PackageReference Include="NServiceBus" Version="7.8.0" />
     <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.1.0" />
     <PackageReference Include="NServiceBus.MongoDB" Version="7.2.1" />
-    <PackageReference Include="NServiceBus.Storage.MongoDB" Version="2.2.0" />
-    <PackageReference Include="NServiceBus.Transport.AzureServiceBus" Version="2.0.2" />
-    <PackageReference Include="Scrutor" Version="3.3.0" />
-    <PackageReference Include="Sentry.AspNetCore" Version="3.12.0-alpha.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.3" />
+    <PackageReference Include="NServiceBus.Storage.MongoDB" Version="2.3.0" />
+    <PackageReference Include="NServiceBus.Transport.AzureServiceBus" Version="2.0.3" />
+    <PackageReference Include="Scrutor" Version="4.2.0" />
+    <PackageReference Include="Sentry.AspNetCore" Version="3.21.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
