--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application/Divstack.Company.Estimation.Tool.Valuations.Application.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application/Divstack.Company.Estimation.Tool.Valuations.Application.csproj
@@ -8,7 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.11.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
-    <PackageReference Include="DotNetCore.CAP" Version="7.0.0" />
+    <PackageReference Include="DotNetCore.CAP" Version="7.0.1" />
     <PackageReference Include="FluentValidation" Version="11.4.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
     <PackageReference Include="MediatR" Version="11.1.0" />
@@ -24,5 +24,14 @@
     <ProjectReference Include="..\..\Inquiries\Divstack.Company.Estimation.Tool.Inquiries.IntegrationsEvents\Divstack.Company.Estimation.Tool.Inquiries.IntegrationsEvents.csproj" />
     <ProjectReference Include="..\..\Services\Divstack.Company.Estimation.Tool.Services.Core\Divstack.Company.Estimation.Tool.Services.Core.csproj" />
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Domain\Divstack.Company.Estimation.Tool.Valuations.Domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Valuations\Commands\CancelProposal\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="Valuations\Commands\CancelProposal\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Valuations\Commands\CancelProposal\**" />
   </ItemGroup>
 </Project>
