--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain/Divstack.Company.Estimation.Tool.Valuations.Domain.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain/Divstack.Company.Estimation.Tool.Valuations.Domain.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <NoWarn>CS8618</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks.csproj" />
     <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.DDD.ValueObjects\Divstack.Company.Estimation.Tool.Shared.DDD.ValueObjects.csproj" />
