--- a/Src/Modules/Payments/Divstack.Company.Estimation.Tool.Payments.Infrastructure.PaymentProcessor.Stripe/Divstack.Company.Estimation.Tool.Payments.Infrastructure.PaymentProcessor.Stripe.csproj
+++ b/Src/Modules/Payments/Divstack.Company.Estimation.Tool.Payments.Infrastructure.PaymentProcessor.Stripe/Divstack.Company.Estimation.Tool.Payments.Infrastructure.PaymentProcessor.Stripe.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Stripe.net" Version="40.10.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Stripe.net" Version="41.3.0-beta.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Payments.Domain\Divstack.Company.Estimation.Tool.Payments.Domain.csproj" />
