--- a/Src/Modules/Services/Tests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests.csproj
+++ b/Src/Modules/Services/Tests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests.csproj
@@ -11,11 +11,11 @@
     <PackageReference Include="Faker.Net" Version="2.0.154" />
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
-    <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
+    <PackageReference Include="Moq" Version="4.18.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="Testcontainers" Version="2.3.0-beta.3547636764" />
+    <PackageReference Include="Testcontainers" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
