--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.AcceptanceTests/appsettings.json
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.AcceptanceTests/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Valuations": "Server=localhost;Port=52574;Database=db;User Id=postgres;Password=postgres;"
+    "Valuations": "Server=localhost;Port=52574;Database=db;User Id=postgres;Password=postgres;Timeout=3000;CommandTimeout=3000"
   },
   "Integrations": {
     "Trello": {
