--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests.csproj
@@ -25,4 +25,21 @@
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Domain\Divstack.Company.Estimation.Tool.Valuations.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Valuations\Proposals\**" />
+    <Compile Remove="Valuations\CompleteValuationTests.cs" />
+    <Compile Remove="Valuations\RequestValuationTests.cs" />
+    <Compile Remove="Valuations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="Valuations\Proposals\**" />
+    <EmbeddedResource Remove="Valuations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Valuations\Proposals\**" />
+    <None Remove="Valuations\**" />
+  </ItemGroup>
+
 </Project>
