--- a/Src/Shared/Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions.csproj
+++ b/Src/Shared/Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hangfire.Core" Version="1.8.0-beta3" />
+    <PackageReference Include="Hangfire.Core" Version="1.8.0-rc2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
